# scholaris

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  README_IMPROVEMENT_PROPOSAL.md  pyproject.toml  requirements.txt  setup.py
.claude/: INSTALL.md
.claude/commands/: batch-process.md  cite.md  process-pdf.md  search-papers.md
.claude/skills/scholaris/: REFERENCE.md  SKILL.md  (+1 more)
docs/wiki/: API-Reference.md  Contributing.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  Troubleshooting.md
examples/: auto_citation_example.py  basic_usage.py  bibtex_example.py  export_example.py  review_example.py
scholaris/: __init__.py  cli.py  config.py  exceptions.py  scholaris.py
scholaris/auto_cite/: __init__.py  citation_engine.py  citation_export.py  citation_index.py  document_formats.py  formatters.py  indexer.py  metadata_extractor.py  models.py  orchestrator.py  page_aware_rag.py  page_offset.py  pdf_processor.py  processed_pdf.py  rag_engine.py  validate_page_detection.py  vision_ocr.py
scholaris/converters/: __init__.py  bibtex_parser.py  docx_converter.py  html_converter.py
scholaris/core/: citation.py  models.py  review.py
scholaris/providers/: base.py
scholaris/utils/: logging.py  rate_limiter.py
spdf/: README.md  SPEC.md  __init__.py
spdf/examples/: full.spdf  generate_examples.py  minimal.spdf
spdf/migrate/: __init__.py  __main__.py  cli.py  migrator.py
spdf/models/: __init__.py  __main__.py  cli.py  embedder.py  store.py
spdf/reference/: __init__.py  reader.py  writer.py
spdf/schema/: v1.0.sql  v1.1.sql
spdf/tests/: __init__.py  test_roundtrip.py  test_v11.py  test_validator.py
spdf/validator/: __init__.py  __main__.py  cli.py  validator.py
(+12 files in other folders)
