[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholaris"
version = "1.3.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python library for academic research automation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pdf2bib>=1.2",
    "bibtexparser>=1.4.0",
    "PyPaperBot>=1.2.0",
    "google-generativeai>=0.3.0",
    "google-api-python-client>=2.0.0",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
    "PyMuPDF>=1.23.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]

[project.scripts]
scholaris = "scholaris.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "flake8>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/scholaris"
"Bug Tracker" = "https://github.com/yourusername/scholaris/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
